refactor: clean how ObjectMapper is used
   - disable pretty mode when writing json for database
   - try to reuse instances when possible